# streamcentre-dismantler

./: .gitignore  README.md
doc/: API.md  storage_interaction.md
segmenter_lib/: .gitignore
segmenter_lib/sources/: CMakeLists.txt  configs.json
segmenter_lib/sources/cmake/: utils.cmake
segmenter_lib/sources/common/: CMakeLists.txt
segmenter_lib/sources/common/src/common/: BaseException.h  CommonExceptions.h  FileHelper.cpp  FileHelper.h  IOExceptions.h  ScopePtr.h  StringHelper.cpp  StringHelper.h  VSCommon.h
segmenter_lib/sources/common/src/common/concurrent/: ConcurrentQueue.h  Semaphore.cpp  Semaphore.h
segmenter_lib/sources/segmenter_python_api/: CMakeLists.txt
segmenter_lib/sources/segmenter_python_api/src/: ExceptionTranslators.cpp  ExceptionTranslators.h  SegmenterPy.cpp
segmenter_lib/sources/segmenter_test_app/: CMakeLists.txt
segmenter_lib/sources/segmenter_test_app/src/: main.cpp
segmenter_lib/sources/video_saver/: CMakeLists.txt
segmenter_lib/sources/video_saver/src/video_saver/: IVideoSaver.h  IVideoSender.h  LocalVideoSaver.cpp  LocalVideoSaver.h  TestVideoSender.cpp  TestVideoSender.h  VideoSaver.cpp  VideoSaver.h
segmenter_lib/sources/video_saver/src/video_saver/http/: HttpFormRequest.cpp  HttpFormRequest.h  HttpVideoSender.cpp  HttpVideoSender.h
segmenter_lib/sources/video_segmenter/: CMakeLists.txt
segmenter_lib/sources/video_segmenter/src/video_segmenter/: ContainerFormats.h  SegmenterParameters.cpp  SegmenterParameters.h  VideoFragment.cpp  VideoFragment.h  VideoSegmenter.cpp  VideoSegmenter.h
segmenter_lib/sources/video_segmenter/src/video_segmenter/data_streams/: ContainerDevice.h  IFFMpegIOStream.h  VideoBuffer.h  VideoFileBuffer.cpp  VideoFileBuffer.h
segmenter_lib/sources/video_segmenter/src/video_segmenter/ffmpeg/: FFmpegDemuxer.cpp  FFmpegDemuxer.h  FFmpegMuxer.cpp  FFmpegMuxer.h
segmenter_lib/sources/video_streams_manager/: CMakeLists.txt
segmenter_lib/sources/video_streams_manager/src/video_streams_manager/: RecorderState.cpp  RecorderState.h  VideoRecorder.cpp  VideoRecorder.h  VideoStreamsManager.cpp  VideoStreamsManager.h  configs.json
segmenter_lib/sources/video_streams_manager/src/video_streams_manager/configs/: ConfigReader.cpp  ConfigReader.h  Configs.cpp  Configs.h
web_api/: .gitignore  configs.json  manage.py  setup.py
web_api/segmenter_app/: app.py  default_settings.py
web_api/tests/: segmenter_app_tests.py  segmenter_mock.py  test_configs.json  test_settings.py
